--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,11 @@
   <link rel="icon" href="ruta/logo">
   <script src="./assets/js/main.js" defer></script>
   <title>Carmen Varela Iglesias | Porfessional Portfolio</title>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -23,6 +27,7 @@
 
   <main id="hero">
     <div class="overlay">
+      <div class="line"></div>
       <h1>Carmen Varela <br>Iglesias | <br>Professional Portfolio</h1>
     </div>
 
