--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <meta name="keywords"
     content="web devoloper, portfolio, carmen varela iglesias, junior web developer, front end developer, proyectos, diseño, estudios, experiencia">
   <link rel="stylesheet" href="./assets/css/style.css" />
-  <link rel="icon" href="ruta/logo">
+  <link rel="icon" href="./assets/img/logo/greenLogo.png">
   <script src="./assets/js/main.js" defer></script>
   <title>Carmen Varela Iglesias | Porfessional Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
