--- a/src/contact.html
+++ b/src/contact.html
@@ -10,10 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
         content="web devoloper, portfolio, carmen varela iglesias, junior web developer, front end developer, proyectos, diseño, estudios, experiencia">
+    <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="icon" href="./assets/img/logo/greenLogo.png">
     <script src="./assets/js/main.js" defer></script>
-    <title>Carmen Varela Iglesias | Porfessional Portfolio</title>
+    <title>CONTACT | Porfessional Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -23,9 +26,9 @@
 
 <body>
     <!--call to navbar-->
-    <div id="navbar"></div>
+    <header id="navbar"></header>
 
-    <main id="hero">
+    <main id="top-title">
         <div class="overlay">
             <div class="line"></div>
             <h1>Carmen Varela <br>Iglesias | <br>Professional Portfolio</h1>
@@ -46,7 +49,7 @@
     </main>
 
     <!--call to footer-->
-    <div id="footer"></div>
+    <footer id="footer"></footer>
 
 </body>
 
