--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -9,11 +9,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords"
     content="web devoloper, portfolio, carmen varela iglesias, junior web developer, front end developer, proyectos, diseño, estudios, experiencia">
+  <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet">
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./assets/css/bootstrap-overrides.css">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="icon" href="./assets/img/logo/greenLogo.png">
-  <title>HOMEPAGE | Professional Portfolio</title>
+  <title>Portfolio | Professional Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -21,9 +24,9 @@
     rel="stylesheet">
 </head>
 
-<body class="homepageBody">
+<body>
   <!--call to navbar-->
-  <header id="navbar"></header>
+  <div id="navbar"></div>
 
   <main id="top-title">
     <div class="overlay">
@@ -31,28 +34,12 @@
       <h1>Carmen Varela Iglesias | <br>Professional Portfolio</h1>
     </div>
 
-    <div class="interactiveButtons">
-      <div class="interactiveMe">
-        <p class="frameMe">Who I Am ?</p>
-        <button onclick="showInfo('aboutMe')" aria-label="Show About Me information"></button>
-      </div>
-      <div class="interactiveProjects">
-        <p class="frameProjects">What I Do?</p>
-        <button onclick="showInfo('portfolio')" aria-label="Show Portfolio information"></button>
-      </div>
-      <div class="interactiveStudies">
-        <p class="frameStudies">What did I study?</p>
-        <button onclick="showInfo('CV')" aria-label="Show CV information"></button>
-      </div>
-    </div>
 
-    <!-- show info "Who i am?" / "What i do?" / "What did i study?" -->
-    <div id="infoContainer"></div>
 
   </main>
 
   <!--call to footer-->
-  <footer id="footer"></footer>
+  <div id="footer"></div>
 
   <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./assets/js/main.js" defer></script>
